--- a/medCalc/app/partials/views/calculator.basic.html
+++ b/medCalc/app/partials/views/calculator.basic.html
@@ -1,15 +1,13 @@
 <form layout-padding name="form">
     <div layout="row" class="view-title">
-        <span class="md-headline">{{::view.description.name}}</span>
+        <span class="md-headline" ng-bind-html="::view.description.name | to_trusted"></span>
         <span flex></span>
-        <md-button class="md-fab md-mini reset-button ng-hide"
-                aria-label="Reset Calculation"
-                ng-show="view.reset && form.$dirty"
-                ng-click="clearPanel()">
+        <md-button class="md-fab md-mini reset-button ng-hide" aria-label="Reset Calculation" ng-show="view.reset && form.$dirty"
+        ng-click="clearPanel()">
             <md-icon md-svg-icon="reset"></md-icon>
         </md-button>
     </div>
-    <div ng-repeat="field in ::view.fields" ng-switch on="field.input.type" layout="column">
+    <div ng-repeat="field in ::view.fields" ng-switch on="field.input.type" layout="column" ng-hide="field.input.hidden">
         <md-input-container ng-switch-when="none">
             <label for="{{::field.id}}" ng-bind-html="::field.name | to_trusted"></label>
             <span></span>
@@ -21,15 +19,16 @@
         <!--<md-input-container ng-switch-when="number">
             <label for="{{field.id}}" ng-bind-html="field.name | to_trusted"></label>
             <div layout="row" layout-align="center center">
-                <input flex="10" type="number" step="{{field.input.step}}" min="{{field.input.min}}" max="{{field.input.max}}" ng-disabled="{{field.input.disabled}}" name="{{field.id}}" ng-model="view.values[field.id]" />
-                <md-slider flex="90" md-discrete step="{{field.input.step}}" min="{{field.input.min}}" max="{{field.input.max}}" ng-disabled="{{field.input.disabled}}" name="{{field.id}}" ng-model="view.values[field.id]" />
+                <input flex="10" type="number" step="{{field.input.step}}" min="{{field.input.min}}" max="{{field.input.max}}" ng-disabled="field.input.disabled" name="{{field.id}}" ng-model="view.values[field.id]" />
+                <md-slider flex="90" md-discrete step="{{field.input.step}}" min="{{field.input.min}}" max="{{field.input.max}}" ng-disabled="field.input.disabled" name="{{field.id}}" ng-model="view.values[field.id]" />
             </div>
             <div class="hint">{{field.description}}</div>
         </md-input-container>-->
         <div layout="row" ng-switch-when="number">
             <md-input-container flex>
                 <label for="{{::field.id}}" ng-bind-html="::field.name | to_trusted"></label>
-                <input type="number" step="{{::field.input.step}}" min="{{::field.input.min}}" max="{{::field.input.max}}" ng-disabled="{{field.input.disabled}}" name="{{::field.id}}" ng-model="view.values[field.id]" select-on-click />
+                <input type="number" step="{{::field.input.step}}" min="{{::field.input.min}}" max="{{::field.input.max}}" ng-disabled="field.input.disabled"
+                name="{{::field.id}}" ng-model="view.values[field.id]" select-on-click />
                 <div class="hint">{{::field.description}}</div>
             </md-input-container>
             <md-button class="md-icon-button" aria-label="Υπολογιστής..." ng-if="field.calculatorView" ng-click="modalCalculator(field.calculatorView, $event)">
@@ -38,19 +37,21 @@
         </div>
         <md-input-container ng-switch-when="text">
             <label for="{{::field.id}}" ng-bind-html="::field.name | to_trusted"></label>
-            <input type="text" ng-disabled="{{field.input.disabled}}" name="{{::field.id}}" maxlength="{{::field.input.length || 524288}}" ng-model="view.values[field.id]" select-on-click />
+            <input type="text" ng-disabled="field.input.disabled" name="{{::field.id}}" maxlength="{{::field.input.length || 524288}}"
+            ng-model="view.values[field.id]" select-on-click />
             <div class="hint">{{::field.description}}</div>
         </md-input-container>
         <md-input-container ng-switch-when="select">
             <label for="{{::field.id}}" ng-bind-html="::field.name | to_trusted"></label>
-            <md-select ng-model="view.values[field.id]" ng-disabled="{{field.input.disabled}}">
+            <md-select ng-model="view.values[field.id]" ng-disabled="field.input.disabled">
                 <md-option ng-repeat="option in ::field.input.options" ng-value="option.value">
                     {{::option.name}}
                 </md-option>
             </md-select>
+            <div class="hint">{{::field.description}}</div>
         </md-input-container>
         <md-input-container ng-switch-when="check">
-            <md-checkbox ng-disabled="{{field.input.disabled}}" ng-model="view.values[field.id]">{{::field.name | to_trusted}}</md-checkbox>
+            <md-checkbox ng-disabled="field.input.disabled" ng-model="view.values[field.id]">{{::field.name | to_trusted}}</md-checkbox>
             <div class="hint">{{::field.description}}</div>
         </md-input-container>
         <div ng-switch-when="result">
