--- a/medCalc/app/partials/views/calculator.basic.html
+++ b/medCalc/app/partials/views/calculator.basic.html
@@ -7,55 +7,5 @@
             <md-icon md-svg-icon="reset"></md-icon>
         </md-button>
     </div>
-    <div ng-repeat="field in ::view.fields" ng-switch on="field.input.type" layout="column" ng-hide="field.input.hidden">
-        <md-input-container ng-switch-when="none">
-            <label for="{{::field.id}}" ng-bind-html="::field.name | to_trusted"></label>
-            <span></span>
-        </md-input-container>
-        <md-input-container ng-switch-when="image">
-            <label for="{{::field.id}}" ng-bind-html="::field.name | to_trusted"></label>
-            <img ng-src="{{::field.url}}" />
-        </md-input-container>
-        <!--<md-input-container ng-switch-when="number">
-            <label for="{{field.id}}" ng-bind-html="field.name | to_trusted"></label>
-            <div layout="row" layout-align="center center">
-                <input flex="10" type="number" step="{{field.input.step}}" min="{{field.input.min}}" max="{{field.input.max}}" ng-disabled="field.input.disabled" name="{{field.id}}" ng-model="view.values[field.id]" />
-                <md-slider flex="90" md-discrete step="{{field.input.step}}" min="{{field.input.min}}" max="{{field.input.max}}" ng-disabled="field.input.disabled" name="{{field.id}}" ng-model="view.values[field.id]" />
-            </div>
-            <div class="hint">{{field.description}}</div>
-        </md-input-container>-->
-        <div layout="row" ng-switch-when="number">
-            <md-input-container flex>
-                <label for="{{::field.id}}" ng-bind-html="::field.name | to_trusted"></label>
-                <input type="number" step="{{::field.input.step}}" min="{{::field.input.min}}" max="{{::field.input.max}}" ng-disabled="field.input.disabled"
-                name="{{::field.id}}" ng-model="view.values[field.id]" select-on-click />
-                <div class="hint">{{::field.description}}</div>
-            </md-input-container>
-            <md-button class="md-icon-button" aria-label="Υπολογιστής..." ng-if="field.calculatorView" ng-click="modalCalculator(field.calculatorView, $event)">
-                <md-icon md-svg-icon="edit" />
-            </md-button>
-        </div>
-        <md-input-container ng-switch-when="text">
-            <label for="{{::field.id}}" ng-bind-html="::field.name | to_trusted"></label>
-            <input type="text" ng-disabled="field.input.disabled" name="{{::field.id}}" maxlength="{{::field.input.length || 524288}}"
-            ng-model="view.values[field.id]" select-on-click />
-            <div class="hint">{{::field.description}}</div>
-        </md-input-container>
-        <md-input-container ng-switch-when="select">
-            <label for="{{::field.id}}" ng-bind-html="::field.name | to_trusted"></label>
-            <md-select ng-model="view.values[field.id]" ng-disabled="field.input.disabled">
-                <md-option ng-repeat="option in ::field.input.options" ng-value="option.value">
-                    {{::option.name}}
-                </md-option>
-            </md-select>
-            <div class="hint">{{::field.description}}</div>
-        </md-input-container>
-        <md-input-container ng-switch-when="check">
-            <md-checkbox ng-disabled="field.input.disabled" ng-model="view.values[field.id]">{{::field.name | to_trusted}}</md-checkbox>
-            <div class="hint">{{::field.description}}</div>
-        </md-input-container>
-        <div ng-switch-when="result">
-            <result result="view.result"></result>
-        </div>
-    </div>
+    <ng-include src="'partials/inputs/input.'+field.input.type+'.html'" ng-repeat="field in ::view.fields" layout="column" ng-hide="field.input.hidden"></ng-include>
 </form>
